syntax = "proto3";

package awesome2.v1;

import "google/api/annotations.proto";
import "awesome2/v1/messages/report.proto";

enum Privacy {
  PRIVACY_UNSPECIFIED = 0;
  PRIVACY_NONE = 1;
  PRIVACY_HIGH = 2;
}

message FindReportByOwnerNameRequest {
  string owner_name = 1;
}
message FindReportByOwnerNameResponse {
  awesome2.v1.messages.Report report = 1;
  Privacy privacy = 2;
}

service Awesome2Service {

  rpc FindReportByOwnerName(FindReportByOwnerNameRequest) returns (FindReportByOwnerNameResponse) {
    option (google.api.http) = {
      get : "/v1/awesome2s/{owner_name}"
    };
  };
}