syntax = "proto3";

package awesome2.v1.messages;

import "google/protobuf/timestamp.proto";

message Pet {
  google.protobuf.Timestamp birthday_utc = 1;
  string name = 2;
}