syntax = "proto3";

package awesome2.v1.messages;

import "google/protobuf/timestamp.proto";
import "awesome2/v1/enums/access_tier.proto";
import "awesome2/v1/messages/pet.proto";

message Report {
  awesome2.v1.enums.AccessTier access_tier = 1;
  bool archived = 2;
  google.protobuf.Timestamp generated_utc = 3;
  awesome2.v1.messages.Pet pet = 4;
  string title = 5;
  string uri = 6;
}